--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">  
   <img width="48" height="48" src="./assets/marmita.png"/>
-  iMarmitas
+  La Fome
 </mat-toolbar>
 <div class="main">    
   <mat-card class="main-card">            
