cadastro de restaurante

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,19 @@
 body {
     font-family: "Arial", sans-serif;      
 }
+
+.title {    
+    font-family: "Arial", sans-serif;  
+    font-weight: bold;  
+    color: #cc0000;
+}
+
+.toolbar {
+    background-color: #cc0000;
+    color: white;
+    font-weight: bold;    
+}
+
+.card-form {    
+    padding: 1%;
+}
