--- a/src/app/cadastro-restaurante/cadastro-restaurante.component.html
+++ b/src/app/cadastro-restaurante/cadastro-restaurante.component.html
@@ -11,37 +11,45 @@
       <mat-card-content>
         <mat-form-field class="inputs">
           <input matInput [(ngModel)]="razaoSocial" maxlength="150" required placeholder="Razão Social">
+          <mat-error *ngIf="obterMensagemErro().RAZAO_SOCIAL">{{obterMensagemErro().RAZAO_SOCIAL}}</mat-error>
         </mat-form-field>      
         <mat-form-field class="inputs">
           <input matInput [(ngModel)]="nomeFantasia" maxlength="150" required placeholder="Nome Fantasia">
+          <mat-error *ngIf="obterMensagemErro().NOME_FANTASIA">{{obterMensagemErro().NOME_FANTASIA}}</mat-error>
         </mat-form-field>      
         <mat-form-field class="inputs">
-          <input matInput [(ngModel)]="cnpj" type="number" maxLength="14" required placeholder="CNPJ">
-          <mat-hint align="start">Somente números</mat-hint>
+          <input matInput (focus)="focusCNPJ($event)" (blur)="blurCNPJ($event)" [errorStateMatcher]="cnpjValidate" [(ngModel)]="cnpj" maxLength="18" required placeholder="CNPJ">
+          <mat-hint align="start">99.999.999/9999-99</mat-hint>
+          <mat-error>{{obterMensagemErro().CNPJ}}</mat-error>
         </mat-form-field>      
         <br>
         <mat-form-field class="inputs">
           <input matInput [(ngModel)]="logradouro" maxlength="255" required placeholder="Logradouro">
+          <mat-error>{{obterMensagemErro().LOGRADOURO}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 10%; padding-right: 2%">
-          <input matInput [(ngModel)]="numero" type="number" required placeholder="Número">          
+          <input matInput [(ngModel)]="numero" type="number" placeholder="Número">               
         </mat-form-field>
         <mat-form-field style="width: 28%; padding-right: 5%">
           <input matInput [(ngModel)]="complemento" maxlength="100" placeholder="Complemento">
         </mat-form-field>
         <mat-form-field class="inputs">
           <input matInput [(ngModel)]="cidade" maxlength="150" required placeholder="Cidade">
+          <mat-error>{{obterMensagemErro().CIDADE}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 28%; padding-right: 2%">
           <input matInput [(ngModel)]="estado" maxlength="60" required placeholder="Estado">
+          <mat-error>{{obterMensagemErro().ESTADO}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 10%; padding-right: 5%">
-          <input matInput [(ngModel)]="cep" maxlength="10" required placeholder="CEP">
+          <input matInput (focus)="focusCEP($event)" (blur)="blurCEP($event)" [errorStateMatcher]="cepValidate" [(ngModel)]="cep" maxlength="10" required placeholder="CEP">
           <mat-hint align="start">Somente números</mat-hint>
+          <mat-error>{{obterMensagemErro().CEP}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 20%; padding-right: 2%">
-          <input matInput [(ngModel)]="telefone" maxlength="14" required placeholder="Telefone">                     
+          <input matInput (focus)="focusTelefone($event)" (blur)="blurTelefone($event)" [errorStateMatcher]="telefoneValidate"[(ngModel)]="telefone" maxlength="14" required placeholder="Telefone">                     
           <mat-hint align="start">(99)99999-9999</mat-hint>
+          <mat-error>{{obterMensagemErro().TELEFONE}}</mat-error>
         </mat-form-field>      
       </mat-card-content>      
     </div>
@@ -51,19 +59,28 @@
     </mat-card-header>
     <mat-card-content>
       <mat-form-field style="width: 18%; padding-right: 2%">
-        <input matInput [(ngModel)]="usuario" maxlength="32" required placeholder="Usuário">        
+        <input matInput [(ngModel)]="usuario" maxlength="32" required placeholder="Usuário">   
+        <mat-error>{{obterMensagemErro().USUARIO}}</mat-error>     
       </mat-form-field>  
       <mat-form-field style="width: 20%; padding-right: 5%">
-        <input matInput [(ngModel)]="senha" type="password" maxlength="300" required placeholder="Senha">        
+        <input matInput [(ngModel)]="senha" type="password" maxlength="300" required placeholder="Senha">   
+        <mat-error>{{obterMensagemErro().SENHA}}</mat-error>     
       </mat-form-field>  
       <mat-form-field class="inputs">
-        <input matInput [(ngModel)]="email" maxlength="150" required placeholder="E-mail">
-      </mat-form-field>     
+        <input matInput (focus)="focusEmail($event)" (blur)="blurEmail($event)" [errorStateMatcher]="emailValidate" [(ngModel)]="email" maxlength="150" required placeholder="E-mail">
+        <mat-error>{{obterMensagemErro().EMAIL}}</mat-error>
+      </mat-form-field>            
+    </mat-card-content>
+    <mat-card-header>
+      <mat-card-title class="title subtitle-font">Logotipo</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-file-upload></app-file-upload>
     </mat-card-content>
     <div class="buttons">    
       <mat-card-actions>
         <button (click)="salvarRestaurante()" id="salvar-button" mat-raised-button>Salvar</button> 
-        <button id="cancelar-button" mat-raised-button>Cancelar</button>                   
+        <button (click)="cancelar()" id="cancelar-button" mat-raised-button>Cancelar</button>                   
       </mat-card-actions>
     </div>      
   </mat-card>
