--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    font-family: "Arial", sans-serif;      
+    font-family: "Arial", sans-serif;  
+    background-color: #f4f4f4;
 }
 
 .title {    
