--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -2,13 +2,46 @@
   <img width="48" height="48" src="./assets/marmita.png"/>
   La Fome
 </mat-toolbar>
-<div>
+<div class="div-master">
   <mat-card>
-    <mat-card-title class="title">
+    <mat-card-title class="title title-inicio">
       Meu Cadastro
-    </mat-card-title>
+    </mat-card-title>    
     <mat-card-content class="card-content">
-      <img src="./assets/register.svg" style:"width: 128px; height: 128px"/>
+      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+    </mat-card-content>
+    <mat-card-actions>
+      <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
+    </mat-card-actions>
+  </mat-card>
+  <mat-card>
+    <mat-card-title class="title title-inicio">
+      Cardápio
+    </mat-card-title>    
+    <mat-card-content class="card-content">
+      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+    </mat-card-content>
+    <mat-card-actions>
+      <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
+    </mat-card-actions>
+  </mat-card>
+  <mat-card>
+    <mat-card-title class="title title-inicio">
+      Pedidos
+    </mat-card-title>    
+    <mat-card-content class="card-content">
+      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+    </mat-card-content>
+    <mat-card-actions>
+      <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
+    </mat-card-actions>
+  </mat-card>
+  <mat-card>
+    <mat-card-title class="title title-inicio">
+      Relatório
+    </mat-card-title>    
+    <mat-card-content class="card-content">
+      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
     </mat-card-content>
     <mat-card-actions>
       <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
