--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -3,6 +3,9 @@
   La Fome
 </mat-toolbar>
 <div class="div-master">
+  <mat-card class="card-restaurant">
+
+  </mat-card>
   <mat-card>
     <mat-card-title class="title title-inicio">
       Meu Cadastro
@@ -19,7 +22,7 @@
       Cardápio
     </mat-card-title>    
     <mat-card-content class="card-content">
-      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+      <img src="./assets/menu.svg" style="width: 128px; height: 128px"/>
     </mat-card-content>
     <mat-card-actions>
       <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
@@ -30,7 +33,7 @@
       Pedidos
     </mat-card-title>    
     <mat-card-content class="card-content">
-      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+      <img src="./assets/order.svg" style="width: 128px; height: 128px"/>
     </mat-card-content>
     <mat-card-actions>
       <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
@@ -41,7 +44,7 @@
       Relatório
     </mat-card-title>    
     <mat-card-content class="card-content">
-      <img src="./assets/register.svg" style="width: 128px; height: 128px"/>
+      <img src="./assets/report.svg" style="width: 128px; height: 128px"/>
     </mat-card-content>
     <mat-card-actions>
       <button (click)="entrar()" id="meu-cadastro-button" class="buttons" mat-raised-button color="warn">Acessar</button>
