--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,12 +1,19 @@
 <app-la-fome-toolbar></app-la-fome-toolbar>
 <div class="div-master">
-  <mat-card class="card-restaurant">
-    <mat-card-title class="card-title-restaurant">
-      {{nomeFantasia}}
-    </mat-card-title>
-    <mat-card-content>
-      {{nomeFantasia}}
-    </mat-card-content>
+  <mat-card class="card-restaurant">  
+    <div style="display: inline-flex">
+      <div style="width: 70px">
+        <img style="width: 50px; height: 50px" src={{restaurante.logo_file}}/>
+      </div>
+      <div>
+        <mat-card-title class="card-title-restaurant">      
+          {{restaurante.nomeFantasia}}
+        </mat-card-title>
+        <mat-card-content>
+          {{restaurante.cnpj}}
+        </mat-card-content>
+      </div>
+    </div>  
   </mat-card>
   <br>
   <br>
