--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,11 @@
 
 body {
     font-family: "Arial", sans-serif;  
-    background-color: #f4f4f4;
+    /*background-color: #f4f4f4;*/
+    /*, #ff3333 80%*/
+    background-color: #cc0000;
+    background-image: linear-gradient(to bottom, transparent, #ff6666 100%);
+    background-size: auto 1280px;
 }
 
 .title {    
