--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="toolbar">  
+<mat-toolbar class="toolbar-inicio">  
   <img width="48" height="48" src="./assets/marmita.png"/>
   La Fome
 </mat-toolbar>
