--- a/src/app/cadastro-restaurante/cadastro-restaurante.component.html
+++ b/src/app/cadastro-restaurante/cadastro-restaurante.component.html
@@ -15,8 +15,7 @@
           <mat-error *ngIf="obterMensagemErro().NOME_FANTASIA">{{obterMensagemErro().NOME_FANTASIA}}</mat-error>
         </mat-form-field>      
         <mat-form-field class="inputs">
-          <input matInput (focus)="focusCNPJ($event)" (blur)="blurCNPJ($event)" [errorStateMatcher]="cnpjValidate" [(ngModel)]="cnpj" maxLength="18" required placeholder="CNPJ">
-          <mat-hint align="start">99.999.999/9999-99</mat-hint>
+          <input matInput (focus)="focusCNPJ($event)" (blur)="blurCNPJ($event)" [errorStateMatcher]="cnpjValidate" [textMask]="{mask: cnpjMask}" [(ngModel)]="cnpj" required placeholder="CNPJ">
           <mat-error>{{obterMensagemErro().CNPJ}}</mat-error>
         </mat-form-field>      
         <br>
@@ -39,13 +38,11 @@
           <mat-error>{{obterMensagemErro().ESTADO}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 10%; padding-right: 5%">
-          <input matInput (focus)="focusCEP($event)" (blur)="blurCEP($event)" [errorStateMatcher]="cepValidate" [(ngModel)]="cep" maxlength="10" required placeholder="CEP">
-          <mat-hint align="start">99999-999</mat-hint>
+          <input matInput (focus)="focusCEP($event)" (blur)="blurCEP($event)" [errorStateMatcher]="cepValidate" [textMask]="{mask: cepMask}" [(ngModel)]="cep" required placeholder="CEP">
           <mat-error>{{obterMensagemErro().CEP}}</mat-error>
         </mat-form-field>
         <mat-form-field style="width: 20%; padding-right: 2%">
-          <input matInput (focus)="focusTelefone($event)" (blur)="blurTelefone($event)" [errorStateMatcher]="telefoneValidate"[(ngModel)]="telefone" maxlength="14" required placeholder="Telefone">                     
-          <mat-hint align="start">(99)99999-9999</mat-hint>
+          <input matInput (focus)="focusTelefone($event)" (blur)="blurTelefone($event)" [errorStateMatcher]="telefoneValidate" [textMask]="{mask: phoneMask}" [(ngModel)]="telefone" required placeholder="Telefone">          
           <mat-error>{{obterMensagemErro().TELEFONE}}</mat-error>
         </mat-form-field>      
       </mat-card-content>      
