--- a/src/app/cadastro-restaurante/cadastro-restaurante.component.css
+++ b/src/app/cadastro-restaurante/cadastro-restaurante.component.css
@@ -11,6 +11,14 @@
     font-size: 120%;
 }
 
+#adicionar-button {    
+    background-color: #cc0000;
+    color: white;
+    font-style: bold;
+    display:inline-block;
+    margin-left: 20px;
+}
+
 #salvar-button {    
     float: right;
     background-color: #cc0000;
