--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -6,10 +6,10 @@
     </mat-card-title>
     <mat-card-content>
       <mat-form-field>
-        <input matInput [ngModel]="filtroDataInicial" type="date" (ngModelChange)="testes($event)" placeholder="Data Inicial">
+        <input matInput [ngModel]="filtroDataInicial" type="date" (ngModelChange)="setDataInicial($event)" placeholder="Data Inicial">
       </mat-form-field>
       <mat-form-field>
-          <input matInput [ngModel]="filtroDataFinal" type="date" (ngModelChange)="testes($event)" placeholder="Data Final">
+          <input matInput [ngModel]="filtroDataFinal" type="date" (ngModelChange)="setDataFinal($event)" placeholder="Data Final">
         </mat-form-field>
     </mat-card-content>
   </mat-card>
