--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -9,8 +9,8 @@
         <input matInput [ngModel]="filtroDataInicial" type="date" (ngModelChange)="setDataInicial($event)" placeholder="Data Inicial">
       </mat-form-field>
       <mat-form-field>
-          <input matInput [ngModel]="filtroDataFinal" type="date" (ngModelChange)="setDataFinal($event)" placeholder="Data Final">
-        </mat-form-field>
+        <input matInput [ngModel]="filtroDataFinal" type="date" (ngModelChange)="setDataFinal($event)" placeholder="Data Final">
+      </mat-form-field>
     </mat-card-content>
   </mat-card>
 </div>
@@ -33,6 +33,22 @@
         <br> Situação: {{pedido.status}}
         <br> Avaliação do restaurante: {{pedido.avaliacaoRestaurante}}
         <br> Forma de pagamento: {{pedido.formaPagamento}}
+        <br>
+        <br>
+        <mat-accordion>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Itens do pedido
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div *ngFor="let item of pedido.itensPedido">
+              <br>Nome: {{item.itemCardapio.nome}}
+              <br>Quantidade: {{item.quantidade}}
+              <br>Valor: R$ {{item.valor}}
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
       </mat-card-content>
     </mat-card>
   </div>
